# passman

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  lib.rs  main.rs  manager.rs
