[package]
name = "passman"
version = "0.1.0"
authors = ["strawhat54 <strawhat54x@gmail.com>"]
edition = "2018"


[dependencies]
orion = "0.16.0"
clipboard = "0.5.0"
rgb = "0.8.27"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
dirs = "3.0.2"
bincode = "1.3.3"
chrono = "0.4.19"
serde_json = "1.0.64"
